# hanashi

./: .gitignore  pyproject.toml
src/hanashi/core/embedding/: __init__.py
src/hanashi/core/llm/: __init__.py  utils.py
src/hanashi/core/vector_search/: __init__.py  base.py  qdrant.py
src/hanashi/services/extractor/: __init__.py
src/hanashi/services/linker/: __init__.py
src/hanashi/services/llm/: __init__.py
src/hanashi/services/rag/: base.py
src/hanashi/services/rag/generator/: llm.py
src/hanashi/services/rag/retriever/: vector_search.py
src/hanashi/services/rephraser/: __init__.py
src/hanashi/types/: __init__.py  conversation.py  utils.py
src/hanashi/utils/: logging.py  misc.py  stream.py  text.py
