[project]
name = "hanashi"
version = "0.0.0"
description = "Add your description here"
authors = [
    { name = "Yevgnen Koh", email = "wherejoystarts@gmail.com" }
]
dependencies = [
    "pydantic>=2.7.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hanashi_types"]
